fixed errors of text wrapping on a small viewport. Now covers most small devices.

--- a/src/components/scss/weather.module.scss
+++ b/src/components/scss/weather.module.scss
@@ -172,3 +172,18 @@
         }
     }
 }
+
+@media screen and (max-width: 420px)
+{
+    .container {
+        p {
+            font-size: 0.75rem;
+        }
+        .fahrenheit {
+            font-size: 1.5rem;
+        }
+        .degrees {
+            font-size: 1.2rem;
+        }
+    }
+}
